--- a/ContosoUniverity/src/ContosoUniversity.Repositories/project.json
+++ b/ContosoUniverity/src/ContosoUniversity.Repositories/project.json
@@ -1,15 +1,14 @@
 {
     "version": "1.0.0-*",
 
-  "dependencies": {
-    "AutoMapper": "5.2.0",
-    "ContosoUniverity.Crud": { "target": "project" },
-    "ContosoUniverity.Data": { "target": "project" },
-    "ContosoUniverity.Domain": { "target": "project" },
-    "NETStandard.Library": "1.6.1",
-    "System.Linq.Expressions": "4.3.0",
-    "XpressionMapper": { "target": "project" }
-  },
+    "dependencies": {
+        "AutoMapper": "6.0.1",
+        "ContosoUniverity.Crud": { "target": "project" },
+        "ContosoUniverity.Data": { "target": "project" },
+        "ContosoUniverity.Domain": { "target": "project" },
+        "NETStandard.Library": "1.6.1",
+        "System.Linq.Expressions": "4.3.0"
+    },
 
     "frameworks": {
         "netstandard1.6": {
